Fix build with Java 11 by migrating to Java 8 Base64 encoder
The sun API is deprecated and this resulted in an error
during the execution of the ant build.